--- a/style-service-process.css
+++ b/style-service-process.css
@@ -1,8 +1,7 @@
-
 /*----------------------container---------------------------*/
 .service-process-container {
     position: relative;
-    width: 900px;
+    width: 50vw;
     min-height: 1200px;
     /* height: fit-content; */
     margin: 0 auto;
@@ -27,32 +26,39 @@
     padding: 15px;
     border-left: black solid 2px;
     padding-bottom: 0px;
+    font-size: 20px;
 }
-.content-container{
+
+.content-container {
     position: relative;
     width: 100%;
-    height: 1200px;  
+    min-height: 1200px;
+    /* height: fit-content; */
 }
-.service-process-content-background{
+
+.service-process-content-background {
     position: absolute;
     width: 100%;
     height: 100%;
     display: flex;
     flex-wrap: wrap;
-    filter: brightness(70%);
+
 }
-.step-background{
-   
+
+.step-background {
     width: 50%;
     height: 250px;
-    top:0;
-    left:0;
+    top: 0;
+    left: 0;
+    filter: brightness(70%);
 }
-.step-img{
+
+.step-img {
     width: 100%;
     height: 250px;
 }
-.step-background:hover{
+
+.step-background:hover {
     filter: brightness(30%);
 }
 
@@ -71,12 +77,6 @@
     padding: 40px;
     color: white;
 
-}
-
-.step-1 {
-    /* background-image: url(image/step1.webp); */
-    /* background: linear-gradient(rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.1)),
-        url(image/step1.webp); */
 }
 
 .title-step {
@@ -101,7 +101,6 @@
 .btn-proposal:hover {
     cursor: pointer;
 }
-
 /*-----------------------------footer------------------------------------*/
 footer {
     background-color: rgb(65, 65, 65);
@@ -110,7 +109,7 @@ footer {
     height: 70vh;
     width: 100vw;
     margin-top: 200px;
-
+   
 }
 
 .banner {
@@ -125,15 +124,20 @@ footer {
     margin: 0 auto;
     text-align: left;
     width: 800px;
-    justify-content: space-between;
+    justify-content: flex-start;
+    gap:100px;
     flex-wrap: wrap;
+    font-size: 13px;
+    margin-top: 40px;
 }
 
-/* .award
-.contact,
-.office-hour {
-    font-size: small;
-} */
+.sp-loc{
+    width: 170px;
+}
+.sp-phone{
+    margin-top: 60px;
+}
+
 
 .final-line {
     display: flex;
@@ -141,8 +145,9 @@ footer {
     width: 800px;
     margin: 0 auto;
     justify-content: flex-end;
-    font-size: small;
+    font-size: 13px;
     align-items: baseline;
+    margin-top: 40px;
 }
 
 /* .final-line .email {
@@ -164,3 +169,131 @@ footer {
 .final-line .menu-final-line li {
     display: inline;
 }
+
+/* Mobile: width < 740px */
+@media only screen and (max-width: 46.25em) {
+
+    html {
+        overflow-x: hidden;
+    }
+
+    body {
+        position: relative;
+
+    }
+
+    .service-process-container {
+        margin: 0;
+        width: 100%;
+        height: fit-content;
+        padding-left: 20px;
+        padding-right: 20px;
+
+    }
+
+    .service-process-banner {
+        height: 100px;
+
+    }
+
+    .img-logo-container {
+        padding-left: 10px;
+    }
+
+    .content-container {
+        position: relative;
+        width: 100%;
+        min-height: 2470px;
+        /* height: fit-content; */
+        /* padding: 20px; */
+
+    }
+
+    .service-process-content-background {
+        flex-direction: column;
+        /* border: black solid 3px; */
+    }
+
+    .step-background {
+        width: 100%;
+        height: 250px;
+        margin-bottom: 20px;
+        /* border: black solid 3px; */
+    }
+
+    .step-img {
+        width: inherit;
+        height: inherit;
+    }
+
+    .service-process-content {
+        flex-direction: column;
+        /* border: black solid 3px; */
+
+    }
+
+    .step {
+        height: 100%;
+        width: 100%;
+        height: 250px;
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 20px;
+        padding-left:20px;
+    }
+
+    .title-step {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .content-step {
+        margin-top: 20px;
+    }
+
+    footer{
+        width:100%;
+        height: 50%;
+    }
+    .banner{
+        width: 100%;
+        text-align: center;
+        padding-top: 10px;
+        padding-bottom: 0;
+    }
+
+    .infor {
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        margin-top: 0;
+        gap:0;
+    }
+
+    .award {
+        display: none;
+    }
+    .titleh1{
+        display: none;
+    }
+    .sp-loc{
+        margin-top: 10px;
+        text-align: center;
+    }
+    .sp-phone{
+        margin-top: 10px;
+        text-align: center;
+        
+    }
+    .final-line{
+        width: 100%;
+        justify-content: center;
+        margin-top: 10px;
+    }
+
+    .menu-final-line{
+        display: none;
+    }
+
+}
+
