--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+/*header*/
+.home-header {
+    display: none;
+}
+
 /*css slider*/
 .slider-item {
     width: 100vw;
@@ -24,7 +29,6 @@
 
 .logo-intro {
     position: absolute;
-
     left: 0%;
     top: 0%;
     object-fit: cover;
@@ -53,26 +57,23 @@
     background-size: cover;
 }
 
-
-
 /*------------------------------owl caresl------------------- */
 .owl-prev {
     position: absolute;
     left: 2%;
     top: 50%;
-    /* transform: translateY(-50%); */
+    transform: translateY(-70%);
     font-size: 50px !important;
-    color: #fff !important;
-
+    color: white !important;
 }
 
 .owl-next {
     position: absolute;
     right: 2%;
     top: 50%;
-    transform: translateY(-50%);
+    transform: translateY(-70%);
     font-size: 50px !important;
-    color: #fff !important;
+    color: white !important;
 }
 
 .owl-prev,
@@ -84,15 +85,15 @@
     position: absolute;
     font-size: 50px;
     color: #fff;
-    bottom: 0;
-    left: 50%;
+    bottom: 5vh;
+    width: 100%;
 }
 
 /*award */
 .section-award-1 {
     position: relative;
     width: 100%;
-    height: auto;
+    /* height: auto; */
 }
 
 #back-1 {
@@ -142,10 +143,6 @@
 #font-text {
     position: absolute;
     background-color: whitesmoke;
-    width: auto;
-    min-width: 440px;
-    height: auto;
-    min-height: 490px;
     left: 12%;
     bottom: 7%;
     font-size: large;
@@ -384,7 +381,6 @@
 .child {
     width: 100%;
     height: 100%;
-
 }
 
 .slider-item-2 {
@@ -524,6 +520,9 @@
     padding: 40px;
     z-index: 1;
 
+}
+.about-example-img{
+    display: none;
 }
 
 .btn-about-forward {
@@ -755,6 +754,9 @@
     z-index: 1;
 
 }
+#font-text-3 img{
+    display: none;
+}
 
 .btn-service-forward {
     position: absolute;
@@ -773,64 +775,153 @@
     background-image: url(image/arrow_forward_2.png);
 }
 
-/*-----------------------------footer------------------------------------*/
-footer {
-    background-color: rgb(65, 65, 65);
-    position: relative;
-    box-sizing: border-box;
-    height: 70vh;
-    width: 100vw;
+/* Mobile: width < 740px */
+@media only screen and (max-width: 46.25em) {
+    html {
+        /* overflow-x: hidden; */
+    }
 
-}
+    .home-container {
+        display: flex;
+        flex-direction: column;
+        width: 100vw;
+        height: 250vh;
+        left: 0;
+        top: 0;
+    }
 
-.banner {
-    padding-top: 50px;
-    width: 800px;
-    margin: 0 auto;
-}
+    .home-header {
+        display: flex;
+        align-items: center;
+        width: 100%;
+        height: 100px;
+    }
 
-.infor {
-    display: flex;
-    color: #fff;
-    margin: 0 auto;
-    text-align: left;
-    width: 800px;
-    justify-content: space-between;
-    flex-wrap: wrap;
-}
+    .slider-item {
+        width: 100vw;
+        height: 40vh;
+    }
 
-/* .award
-.contact,
-.office-hour {
-    font-size: small;
-} */
+    .introduce-animation {
+        display: none;
+    }
 
-.final-line {
-    display: flex;
-    color: #fff;
-    width: 800px;
-    margin: 0 auto;
-    justify-content: flex-end;
-    font-size: small;
-}
+    .section-award-1 {
+        width: 100%;
+        height: 450px;
+    }
 
-.final-line .email {
-    margin-top: 10px;
-}
+    #front-top {
+        display: none;
+    }
 
-.final-line .email:hover {
-    cursor: pointer;
-}
+    #back-1 {
+        display: none;
+    }
 
-.final-line .menu-final-line {
-    margin-left: 50px;
-}
+    #front-left {
+        display: none;
+    }
 
-.final-line .menu-final-line ul {
-    list-style-type: none;
+    #front-right {
+        display: none;
+    }
 
-}
+    #font-text {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        left: 0;
+        top: 0;
+        font-size: 15px;
+        background-color: white;
+    }
 
-.final-line .menu-final-line li {
-    display: inline;
+    .award-txt h1 {
+        width: 100%;
+        font-size: 22px;
+        text-align: center;
+    }
+
+    .award-logo-img {
+        display: none;
+    }
+
+    .section-expore-project {
+        display: none;
+    }
+
+    .section-about {
+        width: 100%;
+        height: 550px;
+    }
+
+    #back-2 {
+        display: none;
+    }
+
+    #front-left-2,
+    #front-right-2 {
+        display: none;
+    }
+
+    #font-text-2 {
+        width: 100%;
+        height: 100%;
+        right: 0;
+        bottom: 0;
+        font-size: 15px;
+        text-align: center;
+    }
+
+    #font-text-2 h1 {
+        font-size: 22px;
+       
+    }
+
+    #font-text-2 .about-example-img {
+        display: block;
+        width: 100%;
+        height: 200px;
+        margin-top: 20px
+    }
+
+    .btn-about-forward {
+        display: none;
+    }
+
+    .section-more-project {
+        display: none;
+    }
+
+    .section-our-service {
+        width: 100%;
+        height: 550px;
+    }
+
+    #back-3,
+    #front-left-3,
+    #front-right-3 {
+        display: none;
+    }
+
+    #font-text-3 {
+        left:0;
+        bottom: 0;
+        width: 100%;
+        height: 100%;
+        text-align: center;
+    }
+    #font-text-3 h1{
+        font-size: 22px;
+        margin-top: 20px;
+    }
+    .btn-service-forward{
+        display: none;
+    }
+    #font-text-3 img{
+        display: block;
+        width: 100%;
+
+    }
 }
