--- a/style-gallery.css
+++ b/style-gallery.css
@@ -1,117 +1,130 @@
-
-
 /* ---------------------------gallery---------------------*/
-.gallery-menu{
+.gallery-menu {
     position: relative;
     display: flex;
     width: 800px;
-    top:100px;
+    top: 100px;
     margin: 0 auto;
     justify-content: center;
     gap: 10px;
 }
 
+.btn-container {
+    display: flex;
+    gap: 10px;
+    padding-left: 15px;
+    border-left: black solid 2px;
+}
+
 .btn-1,
 .btn-2,
 .btn-3,
-.btn-4{
+.btn-4 {
     border: none;
     background-color: gray;
     color: white;
 }
-.btn-1:hover{
-    background-color: white;
+
+.btn-1 {
+    background-color: rgba(211, 211, 211, 0.144);
     color: black;
+}
+
+.btn-1:hover {
+    /* background-color: white;
+    color: black; */
     cursor: pointer;
 }
-.btn-2:hover{
-    background-color: white;
-    color: black;
-    cursor: pointer;
-}
-.btn-3:hover{
-    background-color: white;
-    color: black;
-    cursor: pointer;
-}
-.btn-4:hover{
+
+.btn-2:hover {
     background-color: white;
     color: black;
     cursor: pointer;
 }
 
-.gallery-container{
-    position: relative;;
+.btn-3:hover {
+    background-color: white;
+    color: black;
+    cursor: pointer;
+}
+
+.btn-4:hover {
+    background-color: white;
+    color: black;
+    cursor: pointer;
+}
+
+.gallery-container {
+    position: relative;
+    ;
     display: flex;
     width: 100vw;
     height: auto;
     min-height: 1000px;
     justify-content: space-evenly;
+    align-content: flex-start;
     flex-wrap: wrap;
     margin-top: 10%;
-    gap:20px;
-}
-.gallery-1{
-   
-    width: 400px;
-    height: 400px;
-    background-color: coral;
-}
-.gallery-2{
-  
-    width: 400px;
-    height: 400px;
-    background-color: green;
-}
-.gallery-3{
-   
-    width: 400px;
-    height: 400px;
-    background-color: coral;
-}
-.gallery-4{
-  
-    width: 400px;
-    height: 400px;
-    background-color: green;
-}
-.gallery-5{
-   
-    width: 400px;
-    height: 400px;
-    background-color: coral;
-}
-.gallery-6{
-  
-    width: 400px;
-    height: 400px;
-    background-color: green;
-}
-.gallery-7{
-   
-    width: 400px;
-    height: 400px;
-    background-color: coral;
-}
-.gallery-8{
-  
-    width: 400px;
-    height: 400px;
-    background-color: green;
-}
-.gallery-9{
-   
-    width: 400px;
-    height: 400px;
-    background-color: coral;
-}
-.gallery-10{
-  
-    width: 400px;
-    height: 400px;
-    background-color: green;
+    gap: 10px;
 }
 
+.gallery {
+    width: 400px;
+    height: 400px;
+    display: flex;
+    flex-direction: column;
+}
 
+.gallery-img {
+    width: 100%;
+    height: 80%;
+    transition: transform .3s;
+}
 
+.gallery-img:hover {
+    transform: scale(1.1);
+    cursor: pointer;
+}
 
+.gallery-description {
+    width: 100%;
+    height: 20%;
+    text-align: center;
+    padding: 20px;
+}
+
+/* Mobile: width < 740px */
+@media only screen and (max-width: 46.25em) {
+    .gallery-menu {
+        flex-direction: column;
+        width: 100%;
+        height: 100px;
+        top: 0;
+        padding: 0;
+        justify-items: flex-start;
+    }
+
+    .gallery-menu img {
+        width: 80px;
+        height: 35px;
+    }
+
+    .btn-container {
+        border: none;
+        padding: 0;
+    }
+
+    .btn-1 {
+        background-color: white;
+        width: 50px;
+        font-size: 15px;
+        text-transform: uppercase;
+
+    }
+
+    .btn-2,
+    .btn-3,
+    .btn-4 {
+        display: none;
+    }
+}
