--- a/style-gallery.css
+++ b/style-gallery.css
@@ -127,4 +127,9 @@
     .btn-4 {
         display: none;
     }
+
+    .gallery-container{
+        padding-left: 10px;
+        padding-right: 10px;
+    }
 }
