--- a/nav-style.css
+++ b/nav-style.css
@@ -47,7 +47,7 @@ body {
     border: none;
     background-color: whitesmoke;
     background-repeat: none;
-    border-radius:  45%;
+    border-radius: 45%;
     opacity: 0.5;
 }
 
@@ -247,8 +247,6 @@ a:hover {
         width: 50px;
         height: 50px;
     }
-
-
 }
 
 /*-----------------------------footer------------------------------------*/
@@ -256,15 +254,15 @@ footer {
     background-color: rgb(65, 65, 65);
     position: relative;
     box-sizing: border-box;
-    height: 70vh;
+    height: 65vh;
     width: 100vw;
     margin-top: 200px;
-   padding-bottom: 20px;
+    padding-bottom: 20px;
 }
 
 .banner {
     padding-top: 50px;
-    width: 800px;
+    width: 1000px;
     margin: 0 auto;
 }
 
@@ -273,21 +271,23 @@ footer {
     color: #fff;
     margin: 0 auto;
     text-align: left;
-    width: 800px;
+    width: 1000px;
     justify-content: flex-start;
-    gap:100px;
+    gap: 150px;
     flex-wrap: wrap;
-    font-size: 13px;
+    font-size: 14px;
     margin-top: 40px;
 }
-
-.sp-loc{
+.titleh1{
+    font-size: 22px;
+}
+.sp-loc {
     width: 170px;
 }
-.sp-phone{
+
+.sp-phone {
     margin-top: 60px;
 }
-
 
 .final-line {
     display: flex;
@@ -295,7 +295,7 @@ footer {
     width: 800px;
     margin: 0 auto;
     justify-content: flex-end;
-    font-size: 13px;
+    font-size: 14px;
     align-items: baseline;
     margin-top: 40px;
 }
@@ -311,9 +311,20 @@ footer {
     margin-left: 50px;
 }
 
+.final-line .email a {
+    color: white;
+}
+
+.final-line .email a:visited {
+    color: white;
+}
+
+.final-line .email a:hover {
+    background-color: inherit;
+}
+
 .final-line .menu-final-line ul {
     list-style-type: none;
-
 }
 
 .final-line .menu-final-line li {
@@ -322,11 +333,12 @@ footer {
 
 /* Mobile: width < 740px */
 @media only screen and (max-width: 46.25em) {
-    footer{
-        width:100%;
+    footer {
+        width: 100%;
         height: 50%;
     }
-    .banner{
+
+    .banner {
         width: 100%;
         text-align: center;
         padding-top: 10px;
@@ -338,33 +350,36 @@ footer {
         align-items: center;
         width: 100%;
         margin-top: 0;
-        gap:0;
+        gap: 0;
     }
 
     .award {
         display: none;
     }
-    .titleh1{
+
+    .titleh1 {
         display: none;
     }
-    .sp-loc{
+
+    .sp-loc {
         margin-top: 10px;
         text-align: center;
     }
-    .sp-phone{
+
+    .sp-phone {
         margin-top: 10px;
         text-align: center;
-        
+
     }
-    .final-line{
+
+    .final-line {
         width: 100%;
         justify-content: center;
         margin-top: 10px;
     }
 
-    .menu-final-line{
+    .menu-final-line {
         display: none;
     }
 
 }
-
