--- a/style.css
+++ b/style.css
@@ -801,6 +801,7 @@
         align-items: center;
         width: 100%;
         height: 100px;
+        padding-left: 5px;
     }
 
     .slider-item {
