--- a/style-about-us.css
+++ b/style-about-us.css
@@ -129,13 +129,13 @@
     height: 100%;
 }
 
-.img-zoom:hover{
+.img-zoom:hover {
     transform: scale(1.1);
-  
+
 }
 
 /*----------------------*/
-.introduce-txt {
+.introduce-con {
     padding-top: 30px;
     padding-bottom: 30px;
     padding-left: 15px;
@@ -145,6 +145,10 @@
     line-height: normal;
     font-size: medium;
     letter-spacing: 0.3mm;
+}
+.introduce-con p{
+    text-indent: 30px;
+    text-align: justify;
 }
 
 /*---------------------------*/
@@ -189,16 +193,21 @@
 .map-mes-container {
     width: 100%;
     height: 800px;
-    border: black solid 1px;
     margin-top: 40px;
     display: flex;
-    margin-bottom: 100px;
+    /* margin-bottom: 100px; */
+    background-color: white;
 }
 
 .map-con {
     width: 33%;
     height: 100%;
-    background-color: lightseagreen;
+}
+
+.google-map {
+    width: 100%;
+    height: 100%;
+    border: 0;
 }
 
 .mes-con {
@@ -215,42 +224,119 @@
 }
 
 .tbl-container {
-    border: black solid 1px;
+    /* border: black solid 1px; */
     width: 100%;
     height: 300px;
     margin-top: 10px;
+    display: flex;
+    flex-direction: column;
 }
-.tblcss{
+
+.tblcss {
     display: flex;
     height: 25%;
 }
-.tblcss-2{
+
+.tblcss-2 {
     display: flex;
     height: 50%;
 }
-.concss{
+
+.concss {
     width: 50%;
     border: black solid 1px;
 }
 
-.txtcss{
+.txtcss {
     width: 100%;
     height: 100%;
     padding-left: 20px;
     font-size: 15px;
     border: none;
 }
-.ta{
+
+.ta {
     width: 100%;
     height: 100%;
     padding: 20px;
     font-size: 15px;
+    resize: none;
 }
 
 .container-2 {
-    border: black solid 1px;
     width: 100%;
     height: 300px;
+    display: flex;
+}
+
+.property-type-con {
+    display: flex;
+    flex-direction: column;
+    width: 25%;
+    height: 100%;
+    gap: 5px;
+    font-size: 15px;
+}
+
+.property-status-con {
+    display: flex;
+    flex-direction: column;
+    width: 25%;
+    height: 100%;
+    gap: 5px;
+    font-size: 15px;
+}
+
+.prop-title {
+    font-size: 16px;
+    font-style: italic;
+}
+
+.prop-1,
+.status-1 {
+    margin-top: 10px;
+}
+
+.radio-type {
+    width: 20px;
+    height: 20px;
+}
+
+.col-3 {
+    display: flex;
+    flex-direction: column;
+    width: 45%;
+    height: 100%;
+    margin-left: 5%;
+}
+
+.col-3-con {
+    width: 100%;
+    height: 20%;
+    font-size: 15px;
+    border: black solid 1px;
+}
+
+.col-3-txt {
+    width: 100%;
+    height: 100%;
+    padding-left: 20px;
+
+}
+
+.idea-con {
+    width: 100%;
+    height: 80%;
+    margin-top: 20px;
+}
+
+.ta-idea {
+    width: 100%;
+    height: 100%;
+    resize: none;
+    font-size: 15px;
+    padding: 20px;
+    border: black solid 2px;
 }
 
 .btn-container {
@@ -263,7 +349,7 @@
 
 .info-txt {
     width: 50%;
-    font-size: small;
+    font-size: 13px;
 }
 
 .btn-submit {
@@ -279,4 +365,125 @@
     cursor: pointer;
     color: white;
     opacity: 1;
+}
+
+/* Mobile: width < 740px */
+@media only screen and (max-width: 46.25em) {
+    html{
+        overflow-x: hidden;
+    }
+    .about-container{
+        width: 100vw;
+        height: 360vh;
+        display: flex;
+        flex-direction: column;
+        left: 0;
+        top: 0;
+    }
+
+    .about-us-banner {
+        width: 100vw;
+        height: 100px;
+       
+    }
+
+    .our-story-container {
+        display: none;
+    }
+
+    .our-team-container {
+        display: none;
+    }
+
+    .introduce-con {
+        width: 100vw;
+        height: fit-content;
+    }
+
+    .our-loc-container {
+        display: none;
+    }
+
+    .map-mes-container {
+        flex-direction: column;
+        width: 100vw;
+        padding: 0;
+        /* gap: 20px; */
+    }
+    .map-con{
+        width: 100vw;
+        height: fit-content;
+    }
+    .google-map{
+        width: 100vw;
+        height: 400px;
+        left: 0;
+        top:0;
+    }
+    .mes-con{
+        width: 100vw;
+        height: fit-content;
+        padding-left: 0;
+    }
+    .tbl-container{
+        width: 100vw;
+        height: fit-content;
+        gap: 10px;
+        border: black solid 1px;
+    }
+    .tblcss{
+        width: 100vw;
+        height: fit-content;
+    }
+    .tblcss-2{
+        width: 100vw;
+    }
+    .concss{
+        width: 100%;
+        height: 80px;
+    }
+    .ta{
+        width: 100%;
+        height: 160px;
+    }
+    .mes-con .tbl-row-1{
+        flex-direction: column;
+        gap: 10px;
+    }
+    .mes-con .tbl-row-2{
+        flex-direction: column;
+        gap: 10px;
+    }
+    .container-2{
+        flex-direction: column;
+        width: 100vw;
+        height: fit-content;
+    }
+    .property-type-con{
+        width: 100vw;
+        margin-top: 20px;
+        font-size: 15px;
+    }
+    .property-status-con{
+        width: 100vw;
+        margin-top: 20px;
+    }
+    .col-3{
+        width: 100vw;
+        margin-left: 0;
+        margin-top: 20px;
+        gap:10px;
+    }
+    .col-3-txt{
+        width: 100%;
+        height: 50px;
+    }
+    .ta-idea{
+        width: 100%;
+        height: 150px;
+    }
+    .btn-container .info-txt{
+        display: none;
+    }
+
 }
