--- a/style-about-us.css
+++ b/style-about-us.css
@@ -419,17 +419,18 @@
         height: 400px;
         left: 0;
         top:0;
+       padding: 30px;
     }
     .mes-con{
         width: 100vw;
         height: fit-content;
         padding-left: 0;
+        background-color: white;
     }
     .tbl-container{
         width: 100vw;
         height: fit-content;
         gap: 10px;
-        border: black solid 1px;
     }
     .tblcss{
         width: 100vw;
@@ -446,13 +447,26 @@
         width: 100%;
         height: 160px;
     }
+
+    .mes-title-txt{
+        padding-left: 30px;
+        padding-right: 30px;
+    }
     .mes-con .tbl-row-1{
         flex-direction: column;
         gap: 10px;
+        padding-left: 30px;
+        padding-right: 30px;
     }
     .mes-con .tbl-row-2{
         flex-direction: column;
         gap: 10px;
+        padding-left: 30px;
+        padding-right: 30px;
+    }
+    .mes-con .tbl-row-3{
+        padding-left: 30px;
+        padding-right: 30px;
     }
     .container-2{
         flex-direction: column;
@@ -461,26 +475,43 @@
     }
     .property-type-con{
         width: 100vw;
-        margin-top: 20px;
         font-size: 15px;
+        padding-left: 30px;
+        padding-right: 30px;
     }
     .property-status-con{
         width: 100vw;
         margin-top: 20px;
+        padding-left: 30px;
+        padding-right: 30px;
     }
     .col-3{
         width: 100vw;
         margin-left: 0;
         margin-top: 20px;
         gap:10px;
+       
+    }
+    .col-3-con{
+        padding-left: 30px;
+        padding-right: 30px;
+        border: none;;
     }
     .col-3-txt{
         width: 100%;
         height: 50px;
     }
+    .idea-con{
+        padding-left: 30px;
+        padding-right: 30px;
+    }
     .ta-idea{
         width: 100%;
         height: 150px;
+    }
+    .btn-container{
+        padding-left: 30px;
+        padding-right: 30px;
     }
     .btn-container .info-txt{
         display: none;
