--- a/style-gallery.css
+++ b/style-gallery.css
@@ -56,7 +56,6 @@
 
 .gallery-container {
     position: relative;
-    ;
     display: flex;
     width: 100vw;
     height: auto;
@@ -74,16 +73,32 @@
     display: flex;
     flex-direction: column;
 }
+.block-img{
+    display: inline-block;
+    overflow: hidden;
+}
 
 .gallery-img {
     width: 100%;
-    height: 80%;
-    transition: transform .3s;
+    height: 70%;
+    /* transition: transform .3s; */
+    -webkit-transition: all .2s ease;
+    -moz-transition: all .2s ease;
+    -ms-transition: all .2s ease;
+    -o-transition: all .2s ease;
+    transition: all .2s ease;
+    
+    vertical-align: middle;
 }
 
 .gallery-img:hover {
-    transform: scale(1.1);
+    /* transform: scale(1.1); */
     cursor: pointer;
+    -webkit-transform:scale(1.1); /* Safari and Chrome */
+    -moz-transform:scale(1.1); /* Firefox */
+    -ms-transform:scale(1.1); /* IE 9 */
+    -o-transform:scale(1.1); /* Opera */
+    transform:scale(1.1);
 }
 
 .gallery-description {
@@ -116,7 +131,7 @@
     }
 
     .btn-1 {
-        background-color: white;
+        background-color: inherit;
         width: 50px;
         font-size: 15px;
         text-transform: uppercase;
